--- a/pods.yml
+++ b/pods.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nodeapp
+  name: nodeapp-pod
   labels:
-    app: nodeapp
+    app: nodeapp-pod
 spec:
   containers:
     - name: nodeapp
